Fix bugs reported by Hudson findbugs.