@@ -88,7 +88,7 @@ public class LsDecSignalHead extends DefaultSignalHead {
         if (oldLit != newLit) {
             updateOutput();
             // notify listeners, if any
-            firePropertyChange("Lit", new Boolean(oldLit), new Boolean(newLit));
+            firePropertyChange("Lit", Boolean.valueOf(oldLit), Boolean.valueOf(newLit));
         }    
     }
         
